# cherno

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.md  codecov.yml  pyproject.toml  pytest.ini  readthedocs.yml
.github/workflows/: lint.yml  release.yml  test.yml
cherno/: __init__.py  __main__.py  acquisition.py  astrometry.py  coordinates.py  exceptions.py  extraction.py  guider.py  lcotcc.py  maskbits.py  tcc.py  utils.py
cherno/actor/: __init__.py  acquire.py  actor.py  config.py  converge.py  exposer.py  guide.py  mock.py  offset.py  scale.py  set.py  show.py  status.py  stop.py  version.py
cherno/actor/commands/: acquire.py  config.py  converge.py  guide.py  offset.py  reprocess.py  scale.py  set.py  show.py  status.py  stop.py  version.py
cherno/etc/: astrometrynet_APO.cfg  cherno.yml  cherno_APO.yml  cherno_LCO.yml  schema.json
docs/sphinx/: api.rst  conf.py  index.rst  requirements.txt
python/cherno/: __init__.py  cli.py  exceptions.py
tests/: test_cherno.py  test_main.py
tests/scripts/: run_astrometry.py
