[tool.poetry]
name = "sdss-cherno"
version = "0.1.0-alpha.0"
description = "SDSS guider actor"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/cherno"
repository = "https://github.com/sdss/cherno"
documentation = "https://sdss-cherno.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "cherno" }
]
include = ["LICENSE.md"]

[tool.poetry.scripts]
cherno = "cherno.__main__:cherno"

[tool.poetry.dependencies]
python = "^3.8"
sdsstools = ">=0.1.0"
sdss-clu = "^0.4.0"
sdssdb = "^0.4.3"
numpy = "^1.19.2"
astropy = "^4.0.1"

[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
Sphinx = {version=">=3.0.0"}
pandas = "^1.1.2"
tables = "^3.6.1"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py38']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "cherno"
known_typing = ["typing"]
known_sdss = ["clu", "sdsstools", "sdssdb"]

[tool.pytest.ini_options]
addopts = "--cov cherno --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["cherno/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
